[package]
name = "survivor_library_script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
crossterm = "0.27.0"
futures-util = "0.3.30"
humansize = "2.1.3"
indicatif = { version = "0.17.7", features = ["rayon"] }
once_cell = "1.19.0"
ratatui = "0.25.0"
rayon = "1.8.0"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["blocking", "stream"] }
tokio = { version = "1.35.1", features = ["full"] }
