[package]
name = "survivor_library_script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
once_cell = "1.19.0"
rayon = "1.8.0"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["blocking", "stream"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
